--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css"></link>
     </h:head>
     <h:body>
-        Hello from Facelets
+        Hola
     </h:body>
 </html>
 
