--- a/web/Principal.xhtml
+++ b/web/Principal.xhtml
@@ -1,12 +1,178 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>PAGINA PRINCIPAL PRROS</title>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Principal</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"></link>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
+        <!-- CSS only -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+              integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"></link>
+        <!-- JS, Popper.js, and jQuery -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+            crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="CSS/estilosPrincipal.css"></link>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <nav class="navbar navbar-expand-lg navbar-dark sticky-top shadow-lg" style="background-color: #BF1A2F; height: 100px; font-size: 1.5rem;">
+            <div class="container">
+                <a class="navbar-brand" href="#" style="font-size: 2rem;"><i class="fa fa-cog" aria-hidden="true"></i> Alimentos Procesados</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <div class="navbar-nav mx-5 text-center">
+                        <a class="nav-item nav-link active" href="index.xhtml">Ingreso<span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="FormRegistroC.xhtml">Registrarse</a>
+                    </div>
+                </div>
+            </div>
+         </nav>
+        <!--Fin del header-->
+        <!--Comienzo carrusel-->
+        <div class="carousel">
+             <div id="carruselPrincipal" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carruselPrincipal" data-slide-to="0" class="active"></li>
+                  <li data-target="#carruselPrincipal" data-slide-to="1"></li>
+                  <li data-target="#carruselPrincipal" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                      <img class="d-block w-100" src="IMAGES/BANNER/wp3105346.jpg" alt="First slide"></img>
+                      <div class="texto-imagen-banner" style="top: 50%;left: 40%;">
+                          <div class="container-fluid">
+                            <div class="container h-100">
+                                <div class="row d-flex h-100 justify-content-center align-items-center">
+                                    <div class="frase-saludo">
+                                        <h1 class="text-uppercase">¡En <strong>desarrollo!</strong></h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                      <img class="d-block w-100" src="IMAGES/BANNER/6-63195_food-wallpaper-foods-wallpaper-hd.jpg" alt="Second slide"></img>
+                      <div class="texto-imagen-banner" style="top: 50%;left: 60%;">
+                          <div class="container-fluid">
+                            <div class="container h-100">
+                                <div class="row d-flex h-100 justify-content-center align-items-center">
+                                    <div class="frase-saludo">
+                                        <h1 class="text-uppercase">¡En <strong>desarrollo!</strong></h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                      <img class="d-block w-100" src="IMAGES/BANNER/1324855.jpg" alt="Third slide"></img>
+                      <div class="texto-imagen-banner" style="top: 50%;left: 60%;">
+                          <div class="container-fluid">
+                            <div class="container h-100">
+                                <div class="row d-flex h-100 justify-content-center align-items-center">
+                                    <div class="frase-saludo">
+                                        <h1 class="text-uppercase">¡En <strong>desarrollo!</strong></h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carruselPrincipal" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Atras</span>
+                </a>
+                <a class="carousel-control-next" href="#carruselPrincipal" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Siguiente</span>
+                </a>
+              </div>
+        </div>
+        <!--Fin del carrusel-->
+        <!--Comienzo etiqueta lo mas nuevo-->
+        <div class="container-fluid mt-5 pt-3 pb-3 texto-etiqueta shadow">
+        <div class="container h-100">
+            <div class="row d-flex h-100 justify-content-center align-items-center">
+                <div class="icon-saludo"><span class="icon-cena"></span></div>
+                <div class="frase-saludo">
+                    <h1 class="text-uppercase"><strong>Lo más nuevo</strong></h1>
+                </div>
+            </div>
+        </div>
+    </div>
+        <!--Fin etiqueta lo mas nuevo-->
+        <!--Comienzo galeria lo más nuevo-->
+        <div class="container contenedor">
+            <div class="row flex">
+                        <div class="col-lg-4 col-sm-6 mb-2 mt-2">
+				<div class="thumbnail">
+                                    <img src="https://source.unsplash.com/sBvouTuXoAE" class="img-thumbnail"></img>
+				</div>
+			</div>
+			<div class="col-lg-4 col-sm-6 mb-2 mt-2">
+				<div class="thumbnail">
+                                    <img src="https://source.unsplash.com/VQYxQiiRky0" class="img-thumbnail"></img>
+				</div>
+			</div>
+			<div class="col-lg-4 col-sm-6 mb-2 mt-2">
+				<div class="thumbnail">
+                                    <img src="https://source.unsplash.com/gJFvHkUHdSI" class="img-thumbnail"></img>
+				</div>
+			</div>
+			<div class="col-lg-4 col-sm-6 mb-2 mt-2">
+				<div class="thumbnail">
+                                    <img src="https://source.unsplash.com/Bjw6dbIYtNE" class="img-thumbnail"></img>
+				</div>
+			</div>
+			<div class="col-lg-4 col-sm-6 mb-2 mt-2">
+				<div class="thumbnail">
+                                    <img src="https://source.unsplash.com/C52dylsC1-g" class="img-thumbnail"></img>
+				</div>
+			</div>
+			<div class="col-lg-4 col-sm-6 mb-2 mt-2">
+				<div class="thumbnail">
+                                    <img src="https://source.unsplash.com/wsMwDxF8SKA" class="img-thumbnail"></img>
+				</div>
+			</div>
+			<div class="col-lg-4 col-sm-6 mb-2 mt-2">
+				<div class="thumbnail">
+                                    <img src="https://source.unsplash.com/sfze-8LfCXI" class="img-thumbnail"></img>
+				</div>
+			</div>
+			<div class="col-lg-4 col-sm-6 mb-2 mt-2">
+				<div class="thumbnail">
+                                    <img src="https://source.unsplash.com/8oydDuX4AAM" class="img-thumbnail"></img>
+				</div>
+			</div>
+			<div class="col-lg-4 col-sm-6 mb-2 mt-2">
+				<div class="thumbnail">
+                                    <img src="https://source.unsplash.com/PN_c3RKCVlA" class="img-thumbnail"></img>
+				</div>
+			</div>
+    </div>
+        </div>
+        <!--Fin galeria lo mas nuevo-->
+        <!--Comienzo footer-->
+    <div class="container-fluid pie-pagina">
+        <div class="container">
+            <div class="row justify-content-center text-center">© 2021 Revenger Inc.</div>
+        </div>
+    </div>
+        <!--Fin footer-->
     </h:body>
 </html>
 
