Implementacion de carpeta ICON Implementacion de hoja de estilos para Registro Hipervinculos a todas las paginas

--- a/web/FormRegistroC.xhtml
+++ b/web/FormRegistroC.xhtml
@@ -48,9 +48,8 @@
                             </div>
 
 
-
-                            <h:commandButton value="Registrarme" class="btn btn-block mt-5 btnRegistrarse"></h:commandButton> 
-
+                            <h:commandButton value="Registrarme" class="btn btn-block mt-5 btnRegistrarse" action="Principal.xhtml"></h:commandButton> 
+                            
                             <br></br>
                             
                             <div class="d-sm-flex mb-3 align-items-center">
