--- a/web/Principal.xhtml
+++ b/web/Principal.xhtml
@@ -50,7 +50,7 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                      <img class="d-block w-100" src="IMAGES/BANNER/wp3105346.jpg" alt="First slide"></img>
+                      <img class="d-block w-100 imagenBanner" src="IMAGES/BANNER/wp3105346.jpg" alt="First slide"></img>
                       <div class="texto-imagen-banner" style="top: 50%;left: 40%;">
                           <div class="container-fluid">
                             <div class="container h-100">
@@ -64,7 +64,7 @@
                       </div>
                   </div>
                   <div class="carousel-item">
-                      <img class="d-block w-100" src="IMAGES/BANNER/6-63195_food-wallpaper-foods-wallpaper-hd.jpg" alt="Second slide"></img>
+                      <img class="d-block w-100 imagenBanner" src="IMAGES/BANNER/6-63195_food-wallpaper-foods-wallpaper-hd.jpg" alt="Second slide"></img>
                       <div class="texto-imagen-banner" style="top: 50%;left: 60%;">
                           <div class="container-fluid">
                             <div class="container h-100">
@@ -78,7 +78,7 @@
                       </div>
                   </div>
                   <div class="carousel-item">
-                      <img class="d-block w-100" src="IMAGES/BANNER/1324855.jpg" alt="Third slide"></img>
+                      <img class="d-block w-100 imagenBanner" src="IMAGES/BANNER/1324855.jpg" alt="Third slide"></img>
                       <div class="texto-imagen-banner" style="top: 50%;left: 60%;">
                           <div class="container-fluid">
                             <div class="container h-100">
