--- a/web/FormRegistroC.xhtml
+++ b/web/FormRegistroC.xhtml
@@ -1,7 +1,8 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>REGISTRO CLIENTES</title>
 
@@ -13,6 +14,7 @@
         <link rel="stylesheet" href="CSS/estilosRegistro.css"></link>
 
     </h:head>
+    
     <h:body>
         <main class = "mainContainer">
             <div class="container-fluid">
