--- a/web/Principal.xhtml
+++ b/web/Principal.xhtml
@@ -2,11 +2,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Principal</title>
+        
+        <!-- Bootstrap-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"></link>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
         <!-- CSS only -->
@@ -22,25 +25,56 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
             integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
             crossorigin="anonymous"></script>
+        <script name="jquery/jquery.js" library="primefaces"></script>
         <link rel="stylesheet" href="CSS/estilosPrincipal.css"></link>
     </h:head>
     <h:body>
-        <nav class="navbar navbar-expand-lg navbar-dark sticky-top shadow-lg" style="background-color: #BF1A2F; height: 100px; font-size: 1.5rem;">
+        <header class="header">
+        <div class="container header">
+            <div class="row">
+                <div id="top-bar" class="col-md-9">
+                    <ul>
+                        <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:contact@example.com">contact@example.com</a></li>
+                        <li><i class="fa fa-phone"></i> +1 5589 55488 55</li>
+                        <li><i class="fa fa-calendar"></i> Mon-Fri 9am - 5pm</li>
+                    </ul>
+                </div>
+                <div id="top-bar-center" class="col-md-3">
+                    <h:form>
+                            <p:menubar>
+                                    <p:submenu label="File">
+                                            <p:menuitem value="Edit"></p:menuitem>
+                                            <p:separator/>
+                                            <p:menuitem value="Exit"></p:menuitem>
+                                    </p:submenu>
+                            </p:menubar>
+                    </h:form>
+                </div>
+            </div>
+        </div>
+    </header>
+        <!-- Comienzo del topbar-->
+        
+        <!-- Fin del topbar-->
+        <!--Comienzo del header-->
+        <nav class="navbar navbar-expand-lg navbar-dark shadow-lg">
             <div class="container">
-                <a class="navbar-brand" href="#" style="font-size: 2rem;"><i class="fa fa-cog" aria-hidden="true"></i> Alimentos Procesados</a>
+                <a class="navbar-brand" href="#" style="font-size: 1.5rem;">Alimentos Procesados</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <div class="navbar-nav mx-5 text-center">
-                        <a class="nav-item nav-link active" href="index.xhtml">Ingreso<span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link active" href="index.xhtml">Ingreso<span class="sr-only"></span></a>
                         <a class="nav-item nav-link" href="FormRegistroC.xhtml">Registrarse</a>
+                        <a class="nav-item nav-link" href="ListaProducto.xhtml">Producto</a>
                     </div>
                 </div>
             </div>
          </nav>
         <!--Fin del header-->
         <!--Comienzo carrusel-->
+        <section class="py-4">
         <div class="carousel">
              <div id="carruselPrincipal" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -102,6 +136,7 @@
                 </a>
               </div>
         </div>
+        </section>
         <!--Fin del carrusel-->
         <!--Comienzo etiqueta lo mas nuevo-->
         <div class="container-fluid mt-5 pt-3 pb-3 texto-etiqueta shadow">
@@ -121,22 +156,22 @@
                         <div class="col-lg-4 col-sm-6 mb-2 mt-2">
 				<div class="thumbnail">
                                     <img src="https://source.unsplash.com/sBvouTuXoAE" class="img-thumbnail"></img>
-				</div>
-			</div>
+                            </div>
+                        </div>
 			<div class="col-lg-4 col-sm-6 mb-2 mt-2">
 				<div class="thumbnail">
                                     <img src="https://source.unsplash.com/VQYxQiiRky0" class="img-thumbnail"></img>
-				</div>
-			</div>
+                        </div>
+                        </div>
 			<div class="col-lg-4 col-sm-6 mb-2 mt-2">
 				<div class="thumbnail">
                                     <img src="https://source.unsplash.com/gJFvHkUHdSI" class="img-thumbnail"></img>
-				</div>
-			</div>
+                    </div>
+                </div>
 			<div class="col-lg-4 col-sm-6 mb-2 mt-2">
 				<div class="thumbnail">
                                     <img src="https://source.unsplash.com/Bjw6dbIYtNE" class="img-thumbnail"></img>
-				</div>
+    </div>
 			</div>
 			<div class="col-lg-4 col-sm-6 mb-2 mt-2">
 				<div class="thumbnail">
