--- a/web/PrincipalBodega.xhtml
+++ b/web/PrincipalBodega.xhtml
@@ -67,8 +67,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <div class="navbar-nav mx-5 text-center">
-                        <a class="nav-item nav-link active" href="index.xhtml">Ingreso<span class="sr-only"></span></a>
-                        <a class="nav-item nav-link" href="FormRegistroC.xhtml">Registrarse</a>                        
+                        <a class="nav-item nav-link" href="index.xhtml">Ingreso</a>
+                        <a class="nav-item nav-link" href="FormRegistroC.xhtml">Registrarse</a>  
+                        <a class="nav-item nav-link active" href="index.xhtml">Bodega</a>
                     </div>
                 </div>
             </div>
