--- a/web/PrincipalBodega.xhtml
+++ b/web/PrincipalBodega.xhtml
@@ -36,18 +36,22 @@
             <div class="row">
                 <div id="top-bar" class="col-md-9">
                     <ul>
-                        <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:contact@example.com">contact@example.com</a></li>
-                        <li><i class="fa fa-phone"></i> +1 5589 55488 55</li>
-                        <li><i class="fa fa-calendar"></i> Mon-Fri 9am - 5pm</li>
+                        <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="contacto@empresaAP.com">contacto@empresaAP.com</a></li>
+                        <li><i class="fa fa-phone"></i> +506 1111 1111</li>
+                        <li><i class="fa fa-calendar"></i> Lunes-Viernes 7am - 4pm</li>
                     </ul>
                 </div>
                 <div id="top-bar-center" class="col-md-3">
                     <h:form>
                             <p:menubar>
-                                    <p:submenu label="File">
-                                            <p:menuitem value="Edit"></p:menuitem>
-                                            <p:separator/>
-                                            <p:menuitem value="Exit"></p:menuitem>
+                                    <p:submenu label="Usuario">
+                                        <p:menuitem value="#{beanUsuario.opcion1()}" outcome="#{beanUsuario.opcion1(1)}"></p:menuitem>
+                                        <p:separator/>
+                                        <p:menuitem value="#{beanUsuario.opcion2()}" outcome="#{beanUsuario.opcion2(2)}"></p:menuitem>
+                                        <p:separator/>
+                                        <p:menuitem value="#{beanUsuario.opcion3()}"></p:menuitem>
+                                        <p:separator/>
+                                        <p:menuitem value="#{beanUsuario.opcion3()}" outcome="index"></p:menuitem>
                                     </p:submenu>
                             </p:menubar>
                     </h:form>
@@ -66,9 +70,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                    <div class="navbar-nav mx-5 text-center">
-                        <a class="nav-item nav-link active" href="index.xhtml">Ingreso<span class="sr-only"></span></a>
-                        <a class="nav-item nav-link" href="FormRegistroC.xhtml">Registrarse</a>                        
+                    <div class="navbar-nav mx-5 text-center">                     
                     </div>
                 </div>
             </div>
