Prueba proyecto v2 prueba de funcionamiento

--- a/web/FormRegistroC.xhtml
+++ b/web/FormRegistroC.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>REGISTRO CLIENTES</title>
+        <title>REGISTRO</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
         <!-- CSS only -->
