--- a/web/DetalleProducto.xhtml
+++ b/web/DetalleProducto.xhtml
@@ -75,7 +75,7 @@
                 <h:outputText value="3"/>
                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                 <h:form>
-                  <h:commandButton value="Ver carrito"/>
+                    <h:commandButton value="Ver carrito" action="CarritoCompras.xhtml"/>
                 </h:form>
             </div>
          </nav>
@@ -117,12 +117,12 @@
                         <h:outputText value="#{beanProducto.disponibilidad()}" style="color: #{beanProducto.color()}"></h:outputText>
                         <br/>
                        <h:form>
-                           <p:spinner value="#{beanPedido.cantidadSolicitada}" max="#{beanProducto.producto.cantidad}" min="0"/>
+                           <p:spinner value="#{beanPedido.cantidadSolicitada}" max="#{beanProducto.producto.cantidad}" min="1"/>
                            <br/>
                            <br/>
                            <h:commandButton value="Comprar"></h:commandButton>
                            <br/>
-                           <h:commandButton value="Agregar al carrito"></h:commandButton>
+                           <h:commandButton value="Agregar al carrito" actionListener="#{beanPedido.agregarProductoPedido(beanProducto.producto)}"></h:commandButton>
                            <br/>
                            <br/>
                           <h:link value="Lista" outcome="ListaProducto"></h:link>
