Pantalla Historial agregada

--- a/web/DetallePedido.xhtml
+++ b/web/DetallePedido.xhtml
@@ -71,7 +71,7 @@
                                 #{DetFactura.producto.nombre}
                                 </p:column>
                                 <p:column headerText="Cantidad Solicitada">
-                                #{DetFactura.cantidad}
+                                #{DetFactura.cantidadSolicita}
                                 </p:column>
                                
                                 //more columns
