--- a/web/PrincipalBodega.xhtml
+++ b/web/PrincipalBodega.xhtml
@@ -65,7 +65,7 @@
         <!--Comienzo del header-->
         <nav class="navbar navbar-expand-lg navbar-dark shadow-lg">
             <div class="container">
-                <a class="navbar-brand" href="#" style="font-size: 1.5rem;">Alimentos Procesados</a>
+                <a class="navbar-brand" href="Principal.xhtml" style="font-size: 1.5rem;">Alimentos Procesados</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
