Vinculos de Bodega

--- a/web/DetallePedido.xhtml
+++ b/web/DetallePedido.xhtml
@@ -47,9 +47,8 @@
                                         <p:separator/>
                                         <p:menuitem value="#{beanUsuario.opcion2()}" outcome="#{beanUsuario.opcion2(2)}"></p:menuitem>
                                         <p:separator/>
-                                        <p:menuitem value="#{beanUsuario.opcion3()}"></p:menuitem>
+                                         <p:menuitem value="#{beanUsuario.opcion3()}" outcome="#{beanUsuario.opcion3(3)}"></p:menuitem>
                                         <p:separator/>
-                                        <p:menuitem value="#{beanUsuario.opcion3()}" outcome="index"></p:menuitem>
                                     </p:submenu>
                             </p:menubar>
                     </h:form>
