modificación general 5.0 Johan

--- a/web/FinalizarPedido.xhtml
+++ b/web/FinalizarPedido.xhtml
@@ -114,7 +114,7 @@
                             </div>
 
 
-                            <h:commandButton value="Registrarme" class="btn btn-block mt-5 btnRegistrarse" action="Principal.xhtml"></h:commandButton> 
+                            <h:commandButton value="Finalizar" class="btn btn-block mt-5 btnFinalizar" action="Principal.xhtml"></h:commandButton> 
 
                             <br></br>
 
