CREACION DE MANTENIMIENTOS(PERFIL Y PRODUCTO) VINCULOS PARA TODAS LA PAGINAS

--- a/web/DetalleProducto.xhtml
+++ b/web/DetalleProducto.xhtml
@@ -49,6 +49,14 @@
                                         <p:separator/>
                                         <p:menuitem value="#{beanUsuario.opcion3()}" outcome="#{beanUsuario.opcion3(3)}"></p:menuitem>
                                         <p:separator/>
+                                        <p:menuitem value="Historial" outcome="HistorialPedido"></p:menuitem>
+                                        <p:separator/>
+                                        <p:menuitem value="Reportes" outcome="Reportes"></p:menuitem>
+                                        <p:separator/>
+                                        <p:menuitem value="MantenimientoPerfil" outcome="MantenimientoPerfil"></p:menuitem>
+                                        <p:separator/>
+                                        <p:menuitem value="MantenimientoProducto" outcome="MantenimientoProducto"></p:menuitem>
+                                        <p:separator/>
                                     </p:submenu>
                             </p:menubar>
                     </h:form>
