--- a/web/DetallePedido.xhtml
+++ b/web/DetallePedido.xhtml
@@ -49,6 +49,14 @@
                                         <p:separator/>
                                          <p:menuitem value="#{beanUsuario.opcion3()}" outcome="#{beanUsuario.opcion3(3)}"></p:menuitem>
                                         <p:separator/>
+                                        <p:menuitem value="Historial" outcome="HistorialPedido"></p:menuitem>
+                                        <p:separator/>
+                                        <p:menuitem value="Reportes" outcome="Reportes"></p:menuitem>
+                                        <p:separator/>
+                                        <p:menuitem value="MantenimientoPerfil" outcome="MantenimientoPerfil"></p:menuitem>
+                                        <p:separator/>
+                                        <p:menuitem value="MantenimientoProducto" outcome="MantenimientoProducto"></p:menuitem>
+                                        <p:separator/>
                                     </p:submenu>
                             </p:menubar>
                     </h:form>
@@ -56,6 +64,19 @@
             </div>
         </div>
         </header>
+        <nav class="navbar navbar-expand-lg navbar-dark shadow-lg">
+            <div class="container">
+                <a class="navbar-brand" href="Principal.xhtml" style="font-size: 1.5rem;">Alimentos Procesados</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <div class="navbar-nav mx-5 text-center">
+                        <a class="nav-item nav-link active" href="ListaProducto.xhtml">Producto<span class="sr-only">(current)</span></a>
+                    </div>
+                </div>
+            </div>
+        </nav>
         <h1 class="text-center">Detalle del Pedido</h1>
 
         <!--Comienzo del body-->
