--- a/web/Reportes.xhtml
+++ b/web/Reportes.xhtml
@@ -47,9 +47,16 @@
                                         <p:separator/>
                                         <p:menuitem value="#{beanUsuario.opcion2()}" outcome="#{beanUsuario.opcion2(2)}"></p:menuitem>
                                         <p:separator/>
-                                        <p:menuitem value="#{beanUsuario.opcion3()}"></p:menuitem>
+                                        <p:menuitem value="#{beanUsuario.opcion3()}" outcome="#{beanUsuario.opcion3(3)}"></p:menuitem>
+                                        <p:separator/>                                      
+                                        <p:menuitem value="Historial" outcome="HistorialPedido"></p:menuitem>
                                         <p:separator/>
-                                        <p:menuitem value="#{beanUsuario.opcion3()}" outcome="index"></p:menuitem>
+                                        <p:menuitem value="Reportes" outcome="Reportes"></p:menuitem>
+                                        <p:separator/>
+                                        <p:menuitem value="MantenimientoPerfil" outcome="MantenimientoPerfil"></p:menuitem>
+                                        <p:separator/>
+                                        <p:menuitem value="MantenimientoProducto" outcome="MantenimientoProducto"></p:menuitem>
+                                        <p:separator/>
                                     </p:submenu>
                             </p:menubar>
                     </h:form>
